--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
   <!-- Safari Pinned Tab -->
   <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-config" content="img/favicon/browserconfig.xml" />
 
   <!-- Microsoft Tile -->
   <meta name="msapplication-TileImage" content="img/favicon/mstile-150x150.png">
