--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-touch-icon-152x152.png">
 
   <!-- Android Chrome Icons -->
-  <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="img/favicon/android-chrome-512x512.png">
 
   <!-- Web Manifest -->
   <link rel="manifest" href="img/favicon/site.webmanifest">
