--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <meta name="msapplication-config" content="img/favicon/browserconfig.xml" />
 
   <!-- Microsoft Tile -->
-  <meta name="msapplication-TileImage" content="img/favicon/mstile-150x150.png">
+  <meta name="msapplication-TileImage" content="mstile-150x150.png">
   <meta name="msapplication-TileColor" content="#da532c">
 
   <!-- Theme Color -->
