--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
           <div class="col-lg-4">
             <div class="info">
               <div class="address"> <i class="icofont-google-map"></i>
-                <h4>Location:</h4>
+                <h4>Home:</h4>
                 <p>Dhaka, Bangladesh</p>
               </div>
               <div class="email"> <i class="icofont-envelope"></i>
@@ -586,8 +586,8 @@
                 <p>+91 70445 66978</p>
               </div>
 
-              <div class="text-center"> <a href="mailto:dhrubadattaanjan@gmail.com" target="_blank" class="btn mail"
-                  role="button" aria-disabled="true"><span> Get In Touch</span> </a> </div>
+              <div class="text-center"> <a href="mailto:dhrubadattaanjan@gmail.com" target="_blank" class="mail"
+                  role="button" aria-disabled="true"><span> Get in Touch</span> </a> </div>
             </div> <br>
           </div>
 
