about section updated

--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
                 <ul>
                   <li> <i class="icofont-rounded-right"></i> <strong>Email:</strong> dhrubadattaanjan@gmail.com </li>
                   <li> <i class="icofont-rounded-right"></i> <strong>Birthdate:</strong> 25 February, 2000 </li>
-                  <li> <i class="icofont-rounded-right"></i> <strong>Current Address:</strong> New Delhi, India </li>
-                  <li> <i class="icofont-rounded-right"></i> <strong>Hometown:</strong> Dhaka, Bangladesh </li>
+                  <li> <i class="icofont-rounded-right"></i> <strong>Address:</strong> New Delhi, India </li>
+                  <!-- <li> <i class="icofont-rounded-right"></i> <strong>Hometown:</strong> Dhaka, Bangladesh </li> -->
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li> <i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 70445 66978 </li>
+                  <!-- <li> <i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 70445 66978 </li> -->
                   <li> <i class="icofont-rounded-right"></i> <strong>Major:</strong> Software Engineering </li>
                   <li> <i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Technology (B.Tech)
                   </li>
