--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
               <h4>Conference </h4>
               <ul>
                 <li>
-                  <h5>Status: <em>[Published - November 2023]</em></h5> <br>
+                  <h5>Status: Published [November 2023]</h5> <br>
                   <b> Skin Cancer Detection with Edge Devices Using YOLOv7 Deep CNN,</b>
                   <em>4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
                     Metropolitan University, London, UK.</em>
@@ -645,7 +645,7 @@
             class="bx bxl-facebook"></i></a>
         <hr>
       </div>
-      <div class="copyright">MyPortfolio &copy; 2024 | All Rights Reserved </div>
+      <div class="copyright">Portfolio &copy; 2024 | All Rights Reserved </div>
     </div>
   </footer>
   <a href="#" class="back-to-top"> <i class="icofont-simple-up"></i> </a>
