--- a/index.html
+++ b/index.html
@@ -116,14 +116,15 @@
           <div class="col-lg-4"> <img src="img/profile-img.jpg" class="img-fluid rounded-circle" alt="dhruba datta" />
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <p class="font-weight-normal">
             <h3> Hey there! </h3>
-            I graduated from Delhi Technological University (DTU) with a B.Tech degree in Software Engineering. During
-            my time at DTU, I pursued my undergraduate studies and developed a strong skillset in various areas such as
-            data structure & algorithms, front-end development, Ui/Ux design, SEO and machine learning. I also have a
-            passion for photography, videography and travelling. With a
-            diverse set of technical and creative skills, I'm eager to apply my knowledge to tackle new challenges and
-            make meaningful contributions.
+            <p class="font-weight-normal">
+              I graduated from Delhi Technological University (DTU) with a B.Tech degree in Software Engineering. During
+              my time at DTU, I pursued my undergraduate studies and developed a strong skillset in various areas such
+              as
+              data structure & algorithms, front-end development, Ui/Ux design, SEO and machine learning. I also have a
+              passion for photography, videography and travelling. With a
+              diverse set of technical and creative skills, I'm eager to apply my knowledge to tackle new challenges and
+              make meaningful contributions.
             </p> <br>
             <div class="row">
               <div class="col-lg-6">
@@ -138,7 +139,7 @@
                 <ul>
                   <!-- <li> <i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 70445 66978 </li> -->
                   <li> <i class="icofont-rounded-right"></i> <strong>Major:</strong> Software Engineering </li>
-                  <li> <i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Technology (B.Tech)
+                  <li> <i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Technology (BTech)
                   </li>
                   <li> <i class="icofont-rounded-right"></i> <strong>University:</strong> Delhi Technological University
                   </li>
@@ -146,9 +147,7 @@
               </div>
             </div>
             <hr>
-            <p class="font-weight-normal">
             <h3>Research Interest </h3>
-            </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -266,7 +265,7 @@
               <h6>CGPA: --/4.00 [Data Science]</h6>
             </div> -->
             <div class="resume-item">
-              <h4>Bachelor of Technology (B.Tech)</h4>
+              <h4>Bachelor of Technology (BTech)</h4>
               <h5>August 2019 - July 2023</h5>
               <p><em>Delhi Technological University, New Delhi, India</em></p>
               <h6>CGPA: 8.22/10.00 [Software Engineering]</h6>
@@ -291,22 +290,21 @@
               <h4>Conference </h4>
               <ul>
                 <li>
-                  <h5>Status: Published [November 2023]</h5> <br>
-                  <b> Skin Cancer Detection with Edge Devices Using YOLOv7 Deep CNN,</b>
-                  <em>4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
-                    Metropolitan University, London, UK.</em>
-                  <br>
-                  <h2>
-                    <span style=" font-weight: 500;">
+                  <h5>Status: Published [November 2023]</h5>
+                  <p>
+                    <b> Skin Cancer Detection with Edge Devices Using YOLOv7 Deep CNN,</b>
+                    <em>4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
+                      Metropolitan University, London, UK.</em>
+                  </p>
+                  <h6>
+                    <span>
                       <b>Dhruba Datta,</b> Harsh Prakash, Priya Singh
                     </span>
-                  </h2>
+                  </h6>
                   <br>
-                  <h2 style="color: #272829;">Doi: <a
-                      href="https://link.springer.com/chapter/10.1007/978-981-99-6550-2_5"
-                      target="_blank">10.1007/978-981-99-6550-2_5</a></h2>
+                  <h6>Doi: <a href="https://link.springer.com/chapter/10.1007/978-981-99-6550-2_5"
+                      target="_blank">10.1007/978-981-99-6550-2_5</a></h6>
                 </li>
-
               </ul>
 
             </div>
@@ -324,8 +322,8 @@
                 <li>Solved over <b> 450 problems </b> and achieved a LeetCode reputation of <b>3K+</b> and captivating
                   over <b>200K</b> views, captured the attention of coding enthusiasts worldwide.</li>
                 <!-- <li>Established a professional network with over <b>8000 connections</b> on <b>LinkedIn.</b></li> -->
-                <li>Achieved the establishment and growth of a coding channel on <b>Discord</b>, surpassing <b>600
-                    members</b>.</li>
+                <!-- <li>Achieved the establishment and growth of a coding channel on <b>Discord</b>, surpassing <b>600
+                    members</b>.</li> -->
                 <li>Secured <b>1<sup>st</sup> position</b> among <b>250+ teams</b> in the Wall Magazine competition at
                   the <b>
                     DRMC National Science Festival '16.</b></li>
@@ -418,8 +416,10 @@
               <h4>Dhrubotara Youth Development Foundation</h4>
               <h5>September 2021 - August 2022</h5>
               <p> <em>New Delhi, India</em> </p>
-              <p>DYDF-INDIA combines student power of Bangladesh and India and works on skill development and social
-                issues of both countries. </p>
+              <p>
+                DYDF-INDIA combines student power of Bangladesh and India and works on skill development and social
+                issues of both countries.
+              </p>
             </div>
             <div class="resume-item">
               <h4>Mentor</h4>
@@ -592,28 +592,28 @@
           </div>
 
           <div class="col-lg-8">
-            <h4><em><strong>Updates: </strong></em></h4>
+            <h4>Updates:</h4>
             <hr>
             <div class="row">
               <div class="col-lg-12 col-md-12 icon-box" data-aos="fade-up">
                 <div class="icon"><i class="bi bi-card-text"></i></div>
 
-                <p class="description"><em>[23.04.2023]</em> </p>
-                <h5 class="title">
+                <p><em>[23.04.2023]</em> </p>
+                <h5>
                   My first research paper, titled "Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN" got
                   accepted in the conference.
                 </h5> <br>
 
-                <p class="description"><em>[18.09.2022]</em> </p>
-                <h5 class="title">
+                <p><em>[18.09.2022]</em> </p>
+                <h5>
                   My portfolio got ranked on Google.
                   <em><a
                       href="https://www.google.com/search?q=dhruba+datta&rlz=1C1BNSD_enBD976BD976&oq=dhruba+datta&aqs=chrome.0.69i59j35i39j0i10i22i30j69i65l2j69i60j69i65.2690j0j7&sourceid=chrome&ie=UTF-8"
                       target="_blank">[check here]</a></em>
                 </h5> <br>
 
-                <p class="description"><em>[14.07.2019]</em> </p>
-                <h5 class="title">
+                <p><em>[14.07.2019]</em> </p>
+                <h5>
                   Obtained an offer letter from ICCR to complete my undergraduate studies at Delhi Technological
                   University.
                 </h5> <br>
