updated the updates

--- a/index.html
+++ b/index.html
@@ -598,23 +598,22 @@
               <div class="col-lg-12 col-md-12 icon-box" data-aos="fade-up">
                 <div class="icon"><i class="bi bi-card-text"></i></div>
 
+                <p><em>[28.11.2023]</em> </p>
+                <h5>
+                  "Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN" got published on Springer under
+                  Lecture Notes in Networks and Systems, vol 787.
+                </h5> <br>
+
                 <p><em>[23.04.2023]</em> </p>
                 <h5>
                   My first research paper, titled "Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN" got
-                  accepted in the conference.
-                </h5> <br>
-
-                <p><em>[18.09.2022]</em> </p>
-                <h5>
-                  My portfolio got ranked on Google.
-                  <em><a
-                      href="https://www.google.com/search?q=dhruba+datta&rlz=1C1BNSD_enBD976BD976&oq=dhruba+datta&aqs=chrome.0.69i59j35i39j0i10i22i30j69i65l2j69i60j69i65.2690j0j7&sourceid=chrome&ie=UTF-8"
-                      target="_blank">[check here]</a></em>
+                  accepted in ICDAM-2023.
                 </h5> <br>
 
                 <p><em>[14.07.2019]</em> </p>
                 <h5>
-                  Obtained an offer letter from ICCR to complete my undergraduate studies at Delhi Technological
+                  Obtained an offer letter from ICCR to complete my Bachelors in Software Engineering at Delhi
+                  Technological
                   University.
                 </h5> <br>
 
