hero text shorted

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <p class="font-weight-bold"> Hello, I'm </p>
       <h1>DHRUBA DATTA</h1>
       <p class="font-weight-bold"> I'm a <span class="typed"
-          data-typed-items="Software Engineer, Scholarship Recipient, Web Developer, QA Engineer, Competitive Coder, Photographer, Content Creator"></span>
+          data-typed-items="Software Engineer, Scholarship Recipient, Web Developer, QA Engineer"></span>
       </p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i
@@ -160,7 +160,7 @@
                 <ul>
                   <li> <i class="icofont-rounded-right"></i> Cybersecurity </li>
                   <li> <i class="icofont-rounded-right"></i> Blockchain Technology </li>
-                  <li> <i class="icofont-rounded-right"></i> Human-Computer Interaction </li>
+                  <li> <i class="icofont-rounded-right"></i> Human Computer Interaction </li>
                 </ul>
               </div>
             </div>
