update section and link icon updated

--- a/index.html
+++ b/index.html
@@ -298,12 +298,15 @@
                   </p>
                   <h6>
                     <span>
-                      <b>Dhruba Datta,</b> Harsh Prakash, Priya Singh
+                      <b>Dhruba Datta</b> <a href="https://www.researchgate.net/profile/Dhruba-Datta-2" target="_blank"
+                        title="ResearchGate"><i class='bx bx-link-external'></i></a>, Harsh Prakash, Priya Singh
+                      <a href="https://www.researchgate.net/profile/Priya-Singh-64" target="_blank"
+                        title="ResearchGate"><i class='bx bx-link-external'></i></a>
                     </span>
                   </h6>
                   <br>
-                  <h6>Doi: <a href="https://link.springer.com/chapter/10.1007/978-981-99-6550-2_5"
-                      target="_blank">10.1007/978-981-99-6550-2_5</a></h6>
+                  <h6>Doi: <a href="https://link.springer.com/chapter/10.1007/978-981-99-6550-2_5" target="_blank"
+                      title="Visit Website">10.1007/978-981-99-6550-2_5</a></h6>
                 </li>
               </ul>
 
@@ -318,9 +321,14 @@
                   personal portfolio website that ranked on the
                   <b> first page of Google </b>
                   search results.
+                  <a href="https://www.google.com/search?q=dhruba+datta&rlz=1C1CHBD_enBD1081BD1081&oq=dhruba+datta&gs_lcrp=EgZjaHJvbWUqDggAEEUYJxg7GIAEGIoFMg4IABBFGCcYOxiABBiKBTIKCAEQABiABBiiBDIKCAIQABiABBiiBDIKCAMQABiABBiiBDIKCAQQABiABBiiBDIGCAUQRRhBMgYIBhBFGEEyBggHEEUYQdIBCDE3MzVqMGo0qAIAsAIB&sourceid=chrome&ie=UTF-8"
+                    target="_blank" title="Visit Website"><i class='bx bx-link-external'></i></a>
                 </li>
                 <li>Solved over <b> 450 problems </b> and achieved a LeetCode reputation of <b>3K+</b> and captivating
-                  over <b>200K</b> views, captured the attention of coding enthusiasts worldwide.</li>
+                  over <b>200K</b> views, captured the attention of coding enthusiasts worldwide.
+                  <a href="https://leetcode.com/u/dhruba-datta/" target="_blank" title="Visit Website"><i
+                      class='bx bx-link-external'></i></a>
+                </li>
                 <!-- <li>Established a professional network with over <b>8000 connections</b> on <b>LinkedIn.</b></li> -->
                 <!-- <li>Achieved the establishment and growth of a coding channel on <b>Discord</b>, surpassing <b>600
                     members</b>.</li> -->
@@ -469,7 +477,7 @@
                     data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Link"><i
                       class="bx bxl-github"></i></a>
                   <a href="https://ab-pharmacy.netlify.app/" target="_blank" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Visit Website"><i class="bx bx-link"></i></a>
+                    data-glightbox="type: external" title="Visit Website"><i class="bx bx-link-external"></i></a>
                 </div>
               </div>
             </div>
@@ -484,7 +492,7 @@
                   <a href="https://github.com/dhruba-datta/CryptoVerse" target="_blank" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
                   <a href="https://cryptoverse20.netlify.app" target="_blank" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Visit Website"><i class="bx bx-link"></i></a>
+                    data-glightbox="type: external" title="Visit Website"><i class="bx bx-link-external"></i></a>
                 </div>
               </div>
             </div>
@@ -499,7 +507,7 @@
                   <a href="https://github.com/dhruba-datta/photoBooth" target="_blank" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
                   <a href="https://phootobooth.netlify.app" target="_blank" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Visit Website"><i class="bx bx-link"></i></a>
+                    data-glightbox="type: external" title="Visit Website"><i class="bx bx-link-external"></i></a>
                 </div>
               </div>
             </div>
@@ -515,7 +523,7 @@
                     class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
                   <a href="https://dhruba-datta.github.io/EasyCooking/" target="_blank"
                     class="portfolio-details-lightbox" data-glightbox="type: external" title="Visit Website"><i
-                      class="bx bx-link"></i></a>
+                      class="bx bx-link-external"></i></a>
                 </div>
               </div>
             </div>
@@ -530,7 +538,7 @@
                     class="portfolio-lightbox" title="GitHub Profile"><i class="bx bxl-github"></i></a>
                   <a href="https://github.com/dhruba-datta/dhruba-datta" target="_blank"
                     class="portfolio-details-lightbox" data-glightbox="type: external" title="Repository Details"><i
-                      class="bx bx-link"></i></a>
+                      class="bx bx-link-external"></i></a>
                 </div>
               </div>
             </div>
@@ -594,35 +602,49 @@
           <div class="col-lg-8">
             <h4>Updates:</h4>
             <hr>
-            <div class="row">
-              <div class="col-lg-12 col-md-12 icon-box" data-aos="fade-up">
-                <div class="icon"><i class="bi bi-card-text"></i></div>
+            <div class="timeline">
+              <div class="timeline-item" data-aos="fade-up">
+                <div class="timeline-date"><em>[28.11.2023]</em></div>
+                <div class="timeline-content">
+                  <h5>"Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN" published on Springer under
+                    Lecture Notes in Networks and Systems, vol 787.
+                    <a href="https://link.springer.com/chapter/10.1007/978-981-99-6550-2_5" target="_blank"
+                      title="Visit Website"><i class='bx bx-link-external'></i></a>
+                  </h5>
+                </div>
+              </div>
 
-                <p><em>[28.11.2023]</em> </p>
-                <h5>
-                  "Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN" got published on Springer under
-                  Lecture Notes in Networks and Systems, vol 787.
-                </h5> <br>
+              <div class="timeline-item" data-aos="fade-up">
+                <div class="timeline-date"><em>[23.04.2023]</em></div>
+                <div class="timeline-content">
+                  <h5>My first research paper, titled "Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN"
+                    got accepted in ICDAM-2023.</h5>
+                </div>
+              </div>
 
-                <p><em>[23.04.2023]</em> </p>
-                <h5>
-                  My first research paper, titled "Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN" got
-                  accepted in ICDAM-2023.
-                </h5> <br>
+              <div class="timeline-item" data-aos="fade-up">
+                <div class="timeline-date"><em>[18.09.2022]</em></div>
+                <div class="timeline-content">
+                  <h5>This portfolio is featured on the first page of Google search results.
+                    <a href="https://www.google.com/search?q=dhruba+datta&rlz=1C1CHBD_enBD1081BD1081&oq=dhruba+datta&gs_lcrp=EgZjaHJvbWUqDggAEEUYJxg7GIAEGIoFMg4IABBFGCcYOxiABBiKBTIKCAEQABiABBiiBDIKCAIQABiABBiiBDIKCAMQABiABBiiBDIKCAQQABiABBiiBDIGCAUQRRhBMgYIBhBFGEEyBggHEEUYQdIBCDE3MzVqMGo0qAIAsAIB&sourceid=chrome&ie=UTF-8"
+                      target="_blank" title="Visit Website"><i class='bx bx-link-external'></i></a>
+                  </h5>
+                </div>
+              </div>
 
-                <p><em>[14.07.2019]</em> </p>
-                <h5>
-                  Obtained an offer letter from ICCR to complete my Bachelors in Software Engineering at Delhi
-                  Technological
-                  University.
-                </h5> <br>
-
+              <div class="timeline-item" data-aos="fade-up">
+                <div class="timeline-date"><em>[14.07.2019]</em></div>
+                <div class="timeline-content">
+                  <h5>Obtained an offer letter from ICCR to complete my Bachelors in Software Engineering at Delhi
+                    Technological University.</h5>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
   </main>
 
   <!-- ======= Footer ======= -->
