--- a/index.html
+++ b/index.html
@@ -93,14 +93,16 @@
           data-typed-items="Software Engineer, Scholarship Recipient, Web Developer, QA Engineer"></span>
       </p>
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i
+        <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" title="LinkedIn" class="linkedin"><i
             class="bx bxl-linkedin-square"></i></a>
-        <a href="https://github.com/dhruba-datta" target="_blank" class="GitHub"><i class="bx bxl-github"></i></a>
-        <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="instagram"><i
+        <a href="https://github.com/dhruba-datta" target="_blank" title="GitHub" class="GitHub"><i
+            class="bx bxl-github"></i></a>
+        <a href="https://www.instagram.com/dhrubz_/" target="_blank" title="Instagram" class="instagram"><i
             class="bx bxl-instagram"></i></a>
         <a href="https://scholar.google.co.uk/citations?hl=en&user=RGxdIVkAAAAJ&view_op=list_works&authuser=1&gmla=AH70aAURqNk3ktsHQOlfZFUuNTBsHi7ZPnDjzbSkBWhg2ulKof0-hdur7ndSkkQ72sJwZ2ImrmCa9MtZLRPfjYoH"
-          target="_blank" class="Scholar"><i class='bx bxs-graduation'></i></a>
-        <a href="https://t.me/dhruba_datta_anjan" target="_blank" class="telegram"><i class="bx bxl-telegram"></i></a>
+          target="_blank" title="Google Scholar" class="Scholar"><i class='bx bxs-graduation'></i></a>
+        <a href="https://t.me/dhruba_datta_anjan" target="_blank" title="Telegram" class="telegram"><i
+            class="bx bxl-telegram"></i></a>
       </div>
     </div>
   </section>
@@ -321,8 +323,8 @@
                   personal portfolio website that ranked on the
                   <b> first page of Google </b>
                   search results.
-                  <a href="https://www.google.com/search?q=dhruba+datta&rlz=1C1CHBD_enBD1081BD1081&oq=dhruba+datta&gs_lcrp=EgZjaHJvbWUqDggAEEUYJxg7GIAEGIoFMg4IABBFGCcYOxiABBiKBTIKCAEQABiABBiiBDIKCAIQABiABBiiBDIKCAMQABiABBiiBDIKCAQQABiABBiiBDIGCAUQRRhBMgYIBhBFGEEyBggHEEUYQdIBCDE3MzVqMGo0qAIAsAIB&sourceid=chrome&ie=UTF-8"
-                    target="_blank" title="Visit Website"><i class='bx bx-link-external'></i></a>
+                  <a href="https://www.google.com/search?q=dhruba+datta" target="_blank" title="Visit Website"><i
+                      class='bx bx-link-external'></i></a>
                 </li>
                 <li>Solved over <b> 450 problems </b> and achieved a LeetCode reputation of <b>3K+</b> and captivating
                   over <b>200K</b> views, captured the attention of coding enthusiasts worldwide.
@@ -626,8 +628,8 @@
                 <div class="timeline-date"><em>[18.09.2022]</em></div>
                 <div class="timeline-content">
                   <h5>This portfolio is featured on the first page of Google search results.
-                    <a href="https://www.google.com/search?q=dhruba+datta&rlz=1C1CHBD_enBD1081BD1081&oq=dhruba+datta&gs_lcrp=EgZjaHJvbWUqDggAEEUYJxg7GIAEGIoFMg4IABBFGCcYOxiABBiKBTIKCAEQABiABBiiBDIKCAIQABiABBiiBDIKCAMQABiABBiiBDIKCAQQABiABBiiBDIGCAUQRRhBMgYIBhBFGEEyBggHEEUYQdIBCDE3MzVqMGo0qAIAsAIB&sourceid=chrome&ie=UTF-8"
-                      target="_blank" title="Visit Website"><i class='bx bx-link-external'></i></a>
+                    <a href="https://www.google.com/search?q=dhruba+datta" target="_blank" title="Visit Website"><i
+                        class='bx bx-link-external'></i></a>
                   </h5>
                 </div>
               </div>
