--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
                   </p>
                   <h6>
                     <span>
-                      <b>Dhruba Datta</b> <a href="https://www.researchgate.net/profile/Dhruba-Datta-2" target="_blank"
-                        title="ResearchGate"><i class='bx bx-link-external'></i></a>, Harsh Prakash, Priya Singh
-                      <a href="https://www.researchgate.net/profile/Priya-Singh-64" target="_blank"
+                      <b>Dhruba Datta</b><a href="https://www.researchgate.net/profile/Dhruba-Datta-2" target="_blank"
+                        title="ResearchGate"><i class='bx bx-link-external'></i></a>, Harsh Prakash, Priya Singh<a
+                        href="https://www.researchgate.net/profile/Priya-Singh-64" target="_blank"
                         title="ResearchGate"><i class='bx bx-link-external'></i></a>
                     </span>
                   </h6>
