--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
               <div class="timeline-item" data-aos="fade-up">
                 <div class="timeline-date"><em>[18.09.2022]</em></div>
                 <div class="timeline-content">
-                  <h5>This portfolio is featured on the first page of Google search results.
+                  <h5>This portfolio got featured on the first page of Google search results.
                     <a href="https://www.google.com/search?q=dhruba+datta" target="_blank" title="Visit Website"><i
                         class='bx bx-link-external'></i></a>
                   </h5>
