contact section updated

--- a/index.html
+++ b/index.html
@@ -584,15 +584,15 @@
           <div class="col-lg-4">
             <div class="info">
               <div class="address"> <i class="icofont-google-map"></i>
-                <h4>Home:</h4>
+                <h4>Home</h4>
                 <p>Dhaka, Bangladesh</p>
               </div>
               <div class="email"> <i class="icofont-envelope"></i>
-                <h4>Email:</h4>
+                <h4>Email</h4>
                 <p>dhrubadattaanjan@gmail.com</p>
               </div>
               <div class="phone"> <i class="icofont-phone"></i>
-                <h4>Phone:</h4>
+                <h4>Phone</h4>
                 <p>+91 70445 66978</p>
               </div>
 
@@ -602,7 +602,7 @@
           </div>
 
           <div class="col-lg-8">
-            <h4>Updates:</h4>
+            <h4>Updates</h4>
             <hr>
             <div class="timeline">
               <div class="timeline-item" data-aos="fade-up">
@@ -628,7 +628,7 @@
                 <div class="timeline-date"><em>[18.09.2022]</em></div>
                 <div class="timeline-content">
                   <h5>This portfolio got featured on the first page of Google search results.
-                    <a href="https://www.google.com/search?q=dhruba+datta" target="_blank" title="Visit Website"><i
+                    <a href="https://www.google.com/search?q=dhruba+datta" target="_blank" title="Check Now"><i
                         class='bx bx-link-external'></i></a>
                   </h5>
                 </div>
