publications li tag removed

--- a/index.html
+++ b/index.html
@@ -290,27 +290,27 @@
             <h3 class="resume-title">Publications</h3>
             <div class="resume-item">
               <h4>Conference </h4>
-              <ul>
-                <li>
-                  <h5>Status: Published [November 2023]</h5>
-                  <p>
-                    <b> Skin Cancer Detection with Edge Devices Using YOLOv7 Deep CNN,</b>
-                    <em>4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
-                      Metropolitan University, London, UK.</em>
-                  </p>
-                  <h6>
-                    <span>
-                      <b>Dhruba Datta</b><a href="https://www.researchgate.net/profile/Dhruba-Datta-2" target="_blank"
-                        title="ResearchGate"><i class='bx bx-link-external'></i></a>, Harsh Prakash, Priya Singh<a
-                        href="https://www.researchgate.net/profile/Priya-Singh-64" target="_blank"
-                        title="ResearchGate"><i class='bx bx-link-external'></i></a>
-                    </span>
-                  </h6>
-                  <br>
-                  <h6>Doi: <a href="https://link.springer.com/chapter/10.1007/978-981-99-6550-2_5" target="_blank"
-                      title="Visit Website">10.1007/978-981-99-6550-2_5</a></h6>
-                </li>
-              </ul>
+              <!-- <ul>
+                <li> -->
+              <h5>Status: Published [November 2023]</h5>
+              <p>
+                <b> Skin Cancer Detection with Edge Devices Using YOLOv7 Deep CNN,</b>
+                <em>4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
+                  Metropolitan University, London, UK.</em>
+              </p>
+              <h6>
+                <span>
+                  <b>Dhruba Datta</b><a href="https://www.researchgate.net/profile/Dhruba-Datta-2" target="_blank"
+                    title="ResearchGate"><i class='bx bx-link-external'></i></a>, Harsh Prakash, Priya Singh<a
+                    href="https://www.researchgate.net/profile/Priya-Singh-64" target="_blank" title="ResearchGate"><i
+                      class='bx bx-link-external'></i></a>
+                </span>
+              </h6>
+              <br>
+              <h6>Doi: <a href="https://link.springer.com/chapter/10.1007/978-981-99-6550-2_5" target="_blank"
+                  title="Visit Website">10.1007/978-981-99-6550-2_5</a></h6>
+              <!-- </li>
+              </ul> -->
 
             </div>
             <h3 class="resume-title">Achievements</h3>
@@ -331,9 +331,8 @@
                   <a href="https://leetcode.com/u/dhruba-datta/" target="_blank" title="Visit Website"><i
                       class='bx bx-link-external'></i></a>
                 </li>
-                <!-- <li>Established a professional network with over <b>8000 connections</b> on <b>LinkedIn.</b></li> -->
-                <!-- <li>Achieved the establishment and growth of a coding channel on <b>Discord</b>, surpassing <b>600
-                    members</b>.</li> -->
+                <li>Achieved the establishment and growth of a coding channel on <b>Discord</b>, surpassing <b>600
+                    members</b>.</li>
                 <li>Secured <b>1<sup>st</sup> position</b> among <b>250+ teams</b> in the Wall Magazine competition at
                   the <b>
                     DRMC National Science Festival '16.</b></li>
