--- a/index.html
+++ b/index.html
@@ -604,6 +604,14 @@
             <h4>Updates</h4>
             <hr>
             <div class="timeline">
+              <!-- <div class="timeline-item" data-aos="fade-up">
+                <div class="timeline-date"><em>[28.08.2024]</em></div>
+                <div class="timeline-content">
+                  <h5>Recieved an offer letter to pursue Master's in Data Science from the University of Naples
+                    Federico II in Italy.
+                  </h5>
+                </div>
+              </div> -->
               <div class="timeline-item" data-aos="fade-up">
                 <div class="timeline-date"><em>[28.11.2023]</em></div>
                 <div class="timeline-content">
@@ -614,7 +622,6 @@
                   </h5>
                 </div>
               </div>
-
               <div class="timeline-item" data-aos="fade-up">
                 <div class="timeline-date"><em>[23.04.2023]</em></div>
                 <div class="timeline-content">
@@ -622,7 +629,6 @@
                     got accepted in ICDAM-2023.</h5>
                 </div>
               </div>
-
               <div class="timeline-item" data-aos="fade-up">
                 <div class="timeline-date"><em>[18.09.2022]</em></div>
                 <div class="timeline-content">
@@ -632,11 +638,10 @@
                   </h5>
                 </div>
               </div>
-
               <div class="timeline-item" data-aos="fade-up">
                 <div class="timeline-date"><em>[14.07.2019]</em></div>
                 <div class="timeline-content">
-                  <h5>Obtained an offer letter from ICCR to complete my Bachelors in Software Engineering at Delhi
+                  <h5>Obtained an offer letter from ICCR to complete my Bachelor's in Software Engineering at Delhi
                     Technological University.</h5>
                 </div>
               </div>
